# ContourDetect

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
assets/: resourcefile.qrc
docs/: dongle_strategy.md
src/: CaptureWorker.h  DeepModelRunner.cpp  DeepModelRunner.h  ImageIOUtils.cpp  ImageIOUtils.h  InferencePipeline.cpp  InferencePipeline.h  MainWindow.cpp  MainWindow.h  SegmentationEngine.cpp  SegmentationEngine.h  SegmentationView.cpp  SegmentationView.h  ServiceServer.cpp  ServiceServer.h  main.cpp
src/app/: MonocularContourApp.cpp  MonocularContourApp.hpp
src/contour_detect/: __init__.py  app.py  measurement.py  player.py  preprocess.py
src/measurement/: MeasurementEngine.cpp  MeasurementEngine.hpp
src/player/: IFrameSource.hpp  PlayerController.cpp  PlayerController.hpp  PlayerTypes.hpp  VectorFrameSource.hpp  editableitem.cpp  editableitem.h  graphicsview.cpp  graphicsview.h  lineitem.cpp  lineitem.h  polygonitem.cpp  polygonitem.h  rectitem.cpp  rectitem.h
src/preprocess/: PreProcessPipeline.cpp  PreProcessPipeline.hpp
src/ui/: MainWindow.cpp  MainWindow.hpp
tests/: test_app.py  test_player.py
