[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "contour-detect"
version = "0.1.0"
description = "Monocular contour detect architecture with player/preprocess/measurement pipeline"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["src"]
